# EGE

./: .gitignore  CMakeLists.txt  README.md
assets/: fancy.e3m  player.e3m  tree.e3m
assets/shaders/: passthrough_fragment.gl  passthrough_vertex.gl
src/: main.cpp
src/EGE/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Input.cpp  Input.h  MeshResource.cpp  MeshResource.hpp  Model.cpp  Model.hpp  OpenGLContext.cpp  OpenGLContext.hpp  RenderProgram.cpp  RenderProgram.hpp  Resources.cpp  Resources.h  Scene.h  Shader.cpp  Shader.hpp  Texture.cpp  Texture.h
src/EGE/ECS/: CameraComponentSystem.cpp  CameraComponentSystem.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityWorld.cpp  EntityWorld.h  MeshResourceComponentSystem.cpp  MeshResourceComponentSystem.h  TransformComponentSystem.cpp  TransformComponentSystem.h  Util.h
src/EGE/Memory/: Allocator.h
src/Scenes/: SceneWithEntities.cpp  SceneWithEntities.h
